# supersonic-algorithms

./: .gitattributes  .gitignore  AUSFUEHREN.md  IDEES.md  Makefile  OPTIMIERUNG_VON_ALGORITHMEN.md  README.md  cleanall.py
Infomaterial/: A1_Fragebogen_Wettbewerbsbesuch_mit_Schuelern.docx  B_Projektmanagement_Vorlage.docx  G_Schriftliche_Arbeit_Vorlage.docx  H_Plakaterstellung_Vorlage.pptx  Vorlage_Langfassung_Jugend_forscht_OpenOffice.odt  Vorlage_Langfassung_Jugend_forscht_Word.docx  Vorlage_Langfassung_Schueler_experimentieren_OpenOffice.odt  Vorlage_Langfassung_Schueler_experimentieren_Word.docx
cpp/: CMakeLists.txt  Makefile  README.md  main.cpp  sortv1  sortv1.cpp  sortv2  sortv2.0  sortv2.1.cpp
cpp/src/: funcs.cpp  funcs.hpp  gen.hpp  generation_lists.cpp  generation_lists.hpp  quicksort.cpp  quicksort.hpp  radixsort_fast.cpp  radixsort_faster.cpp  radixsort_normal.cpp  sortv1.cpp  standard_sort.cpp  tests.hpp  timer.cpp  timer.hpp
cpp/src/datastructures/: CMakeLists.txt  main.cpp  timer.hpp  vector.cpp
cpp/src/hellofradixsort/: CMakeLists.txt  Radix Sort Revisited.html  generation_lists.cpp  links.txt  terdimann_simple.cpp  terdimann_simple_extensions.cpp  timer.cpp
doc/: README_CPP.md  analysepunkte.md
infomaterial/: A2_Feedbackbogen_Wettbewerbsbesuch_mit_Schuelern.docx  C1_Themenfindung_Vorlage.docx  C2_Nachhaltige_Produktentwicklung_Vorlage.docx  D1_Forschungsdokumentation_Vorlage.docx  D2_Forschertagebuch.docx  E_Rechercheprotokoll_Vorlage.docx  F_Kurzfassung_Vorlage.docx  G1_Schriftliche_Arbeit_Vorlage.docx  I1_Vortrag_ueben_Vorlage_.docx  (+1 more)
(+77 files in other folders)
